# 24783-Project-nullPtr

./: Component Design.docx  Final Project Proposal.docx  Final-Goal Calibration Presentation.pptx  ROUNDED_EXPANDING_ARC_TUBE_NOZZLE.STL  Short Project Proposal.pptx  fluent-20210417-130942-11780.trn
Alpha_version/: CMakeLists.txt
Alpha_version/24783_mesh.xcodeproj/: project.pbxproj
Alpha_version/24783_mesh.xcodeproj/project.xcworkspace/xcuserdata/greentartan35.xcuserdatad/: UserInterfaceState.xcuserstate
Alpha_version/24783_mesh.xcodeproj/xcshareddata/xcschemes/: 24783_mesh.xcscheme
Alpha_version/24783_mesh.xcodeproj/xcuserdata/greentartan35.xcuserdatad/xcschemes/: xcschememanagement.plist
Alpha_version/draw_mesh/: CMakeLists.txt  main.cpp
Alpha_version/generate_mesh/: CMakeLists.txt  genMesh.cpp  readme.txt
Alpha_version/generate_mesh/output/: m_25.000000_0.bdf
Alpha_version/generate_simulation_files/: CMakeLists.txt  generate_simulation_files.cpp
Alpha_version/generate_simulation_files/io/: new_mesh.bdf  simulation_input_journal0.jou  simulation_input_journal1.jou  simulation_input_journal2.jou  test_result_0.txt
Alpha_version/generate_simulation_files/lib/: gmsh.lib
Beta_version/: CMakeLists.txt  README  main.cpp
Beta_version/draw_mesh/: CMakeLists.txt  drawMesh.cpp  drawMesh.h
Beta_version/generate_mesh/: genMesh.cpp  readme.txt
Beta_version/generate_simulation/: CMakeLists.txt  GUI_test_1.cpp  GUI_test_2.cpp  GUI_test_3.cpp  genSim.cpp  genSim.h  genSim_test_1.cpp  genSim_test_2.cpp  genSim_test_3.cpp
Beta_version/generate_simulation/tests_resource_files/: m_0.bdf  test_result_0.txt
Beta_version/meshclickdraw/: CMakeLists.txt  README.txt  meshclickdraw.cpp  meshclickdraw.h
